--- a/HackCenter/pom.xml
+++ b/HackCenter/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>StuyHacks2017</groupId>
-	<artifactId>HackCenter</artifactId>
+	<artifactId>HackCentral</artifactId>
 	<version>0.1</version>
 	<name>HackCenter</name>
 	<description>Allows people to create their own hackathons and keep it under control.</description>
